
  [ Gary Lasker ]
  * softwarecenter/view/availablepane.py:
    - restore missing busy cursor when loading applist 
      views (LP: #610688)

  [ Michael Vogt ]
  * softwarecenter/view/widgets/actionbar.py:
    - fix crash in action buttons
  * softwarecenter/db/update.py:
    - support additional metadata from Packages file for the
      "Whats new" repository (and possible others)
  
 [ Bilal Akhtar ]
 * softwarecenter/app.py:
   - Prevent About dialog from being set as modal. (LP: #550955)

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 27 Jul 2010 22:01:54 -0400

software-center (2.1.6) maverick; urgency=low

  [ Kiwinote ]
  * data/software-center.menu.in:
    - update query for fonts category (LP: #531570, #605459)
  * debian/control:
    - depend on humanity-icon-theme, rather than gnome-icon-theme
  * softwarecenter/app.py:
    - always append the humanity-icon-theme to the iconpath (LP: #436310, #466271, #527503, #556335, #594795)
  * softwarecenter/view/availablepane.py:
    - capitalize 'install n items' button label for mpt (LP: #605052)
  * softwarecenter/view/catview_gtk.py:
    - speed up carousel transition (thanks nuthinking) (LP: #604627)
  * softwarecenter/view/catview.py:
    - allow 'OR' tag inside an 'AND' tag
  
  [ Michael Vogt ]
  * softwarecenter/db/database.py:
    - parse axi values file for cataloged_time support
  * merged lp:~mvo/software-center/new-apps-test1 that adds support
    for a proper a "Whats new" category based on the xapian 
    cataloged_time information
  * debian/control:
    - recommend aptdaemon (>= 0.38ubuntu1) to get catalogued_time
      support
    - recommend sessioninstaller for PK compatible session API
  * merged lp:~hellium/software-center/logging, thanks to 
    Geliy Sokolov
  * merged lp:~mmcg069/software-center/bigger-icons, the icon size
    is actually the same, name is a bit misleading. It contains a new
    actionbar, but that is not yet enabled as its not feature complete
    yet