@@ -30,6 +30,12 @@ from ConfigParser import RawConfigParser, NoOptionError
 from glob import glob
 
 from softwarecenter.enums import *
+from softwarecenter.db.database import parse_axi_values_file
+
+from locale import getdefaultlocale
+import gettext
+import cPickle
+
 
 # weights for the different fields
 WEIGHT_DESKTOP_NAME = 10
@@ -41,13 +47,20 @@ WEIGHT_APT_PKGNAME = 8
 WEIGHT_APT_SUMMARY = 5
 WEIGHT_APT_DESCRIPTION = 1
 
-from locale import getdefaultlocale
-import gettext
-
 # some globals (FIXME: that really need to go into a new Update class)
 popcon_max = 0
 seen = set()
-logger = logging.getLogger(__name__)
+LOG = logging.getLogger(__name__)
+
+# init axi
+axi_values = parse_axi_values_file()
+
+# get cataloged_times
+cataloged_times = {}
+CF = "/var/lib/apt-xapian-index/cataloged_times.p"
+if os.path.exists(CF):
+    cataloged_times = cPickle.load(open(CF))
+del CF
 
 class AppInfoParserBase(object):
     """ base class for reading AppInfo meta-data """
@@ -70,6 +83,8 @@ class AppInfoParserBase(object):
     def desktopf(self):
         """ return the file that the AppInfo comes from """
 
+# FIXME: this needs to go into a seperate DB (axi?) as we can
+#        not trigger update-app-install after each apt-get update
 class AptCachePkgParser(AppInfoParserBase):
     """ parser that fakes a Application from a pkg-record
         Useful for special repositories like "Whats New"
@@ -209,7 +224,7 @@ def update(db, cache, datadir=APP_INSTALL_PATH):
     update_from_var_lib_apt_lists(db, cache)
     update_from_apt_cache_for_whats_new_repo(db, cache)
     # add db global meta-data
-    logger.debug("adding popcon_max_desktop '%s'" % popcon_max)
+    LOG.debug("adding popcon_max_desktop '%s'" % popcon_max)
     db.set_metadata("popcon_max_desktop", xapian.sortable_serialise(float(popcon_max)))
 
 def update_from_apt_cache_for_whats_new_repo(db, cache):
@@ -234,7 +249,7 @@ def update_from_var_lib_apt_lists(db, cache, listsdir=None):
         listsdir = apt_pkg.Config.find_dir("Dir::State::lists")
     context = glib.main_context_default()
     for appinfo in glob("%s/*AppInfo" % listsdir):
-        logger.debug("processing %s" % appinfo)
+        LOG.debug("processing %s" % appinfo)
         # process events
         while context.pending():
             context.iteration()
@@ -248,7 +263,7 @@ def update_from_app_install_data(db, cache, datadir=APP_INSTALL_PATH):
     """ index the desktop files in $datadir/desktop/*.desktop """
     context = glib.main_context_default()
     for desktopf in glob(datadir+"/desktop/*.desktop"):
-        logger.debug("processing %s" % desktopf)
+        LOG.debug("processing %s" % desktopf)
         # process events
         while context.pending():
             context.iteration()
@@ -258,7 +273,7 @@ def update_from_app_install_data(db, cache, datadir=APP_INSTALL_PATH):
             index_app_info_from_parser(parser, db, cache)
         except Exception, e:
             # Print a warning, no error (Debian Bug #568941)
-            logger.warning("error processing: %s %s" % (desktopf, e))
+            LOG.warning("error processing: %s %s" % (desktopf, e))
     return True
         
 def index_app_info_from_parser(parser, db, cache):
@@ -268,7 +283,7 @@ def index_app_info_from_parser(parser, db, cache):
         # app name is the data
         name = parser.get_desktop("Name")
         if name in seen:
-            logger.debug("duplicated name '%s' (%s)" % (name, parser.desktopf))
+            LOG.debug("duplicated name '%s' (%s)" % (name, parser.desktopf))
         seen.add(name)
         doc.set_data(name)
         index_name(doc, name, term_generator)
@@ -276,13 +291,17 @@ def index_app_info_from_parser(parser, db, cache):
         if parser.has_option_desktop("X-AppInstall-Ignore"):
             ignore = parser.get_desktop("X-AppInstall-Ignore")
             if ignore.strip().lower() == "true":
-                logger.debug("X-AppInstall-Ignore found for '%s'" % parser.desktopf)
+                LOG.debug("X-AppInstall-Ignore found for '%s'" % parser.desktopf)
                 return
         # package name
         pkgname = parser.get_desktop("X-AppInstall-Package")
         doc.add_term("AP"+pkgname)
         doc.add_value(XAPIAN_VALUE_PKGNAME, pkgname)
         doc.add_value(XAPIAN_VALUE_DESKTOP_FILE, parser.desktopf)
+        # cataloged_times
+        if pkgname in cataloged_times:
+            doc.add_value(axi_values["catalogedtime"], 
+                          xapian.sortable_serialise(cataloged_times[pkgname]))
         # pocket (main, restricted, ...)
         if parser.has_option_desktop("X-AppInstall-Section"):
             archive_section = parser.get_desktop("X-AppInstall-Section")
@@ -380,8 +399,8 @@ def rebuild_database(pathname):
     cache = apt.Cache(memonly=True)
     # check permission
     if not os.access(pathname, os.W_OK):
-        logger.warn("Cannot write to '%s'." % pathname)
-        logger.warn("Please check you have the relevant permissions.")
+        LOG.warn("Cannot write to '%s'." % pathname)
+        LOG.warn("Please check you have the relevant permissions.")
         return False
     # write it
     db = xapian.WritableDatabase(pathname, xapian.DB_CREATE_OR_OVERWRITE)
